# 10001

./: 10001.sln  idk.py  index.py  meme_fetcher.py  memes.txt
.mono/registry/CurrentUser/software/microsoft/csdevkit/telemetry/persistentpropertybag/microsoft.visualstudio.code.servicehost/: values.xml
.mono/registry/CurrentUser/software/microsoft/csdevkit/v1/pids/2395_133559961484730698/: values.xml
Discord-PHP/: bot.php  composer.json
Golang/: go.mod  webserver.go
Java/: build.gradle  main.java  settings.gradle
Pillow/: index.py
Ruby-101/: 101.rb
Rust/: Cargo.toml
Rust/src/: main.rs
apiflash-ss/: req.py
base64/: decode.py  encode.py  lunded.txt
c/: lund  main.c
c++/: index
csharp/: Program.cs  csharp.csproj
dcb-rust/: Cargo.toml
dcb-rust/src/: main.rs
dgo/: go.mod  main.go
flask/: README.md  server.py
flask/templates/: index.html
javascript/: index.js  package-lock.json  package.json
meme/: meme.rb
meme-ruby/: meme-ruby.rb
pcap++/: main.cpp
ruby-bj/: ruby-bj.rb
ruby-calc/: ruby-calc.rb
ruby-else/: ruby-else.rb
ruby-elsif/: ruby-elsif.rb
ruby-hangman/: ruby-hangman.rb
ruby-memez/: ruby-memez.rb
ruby-scramble/: ruby-scramble.rb
ruby-tictactoe/: ruby-tictactoe.rb
rust-webserver/: Cargo.toml  README.md  terminal_logs.txt
rust-webserver/src/: main.rs
web-development/: index.html  style.css
