[package]
name = "dcb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies]
serenity = { version = "0.12", features = ["full", "rustls_backend"] } # Adjust the version as needed
tokio = { version = "1", features = ["full"] }
